gitops/manifests/redirect-eglise/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: redirect-eglise
  namespace: redirect-eglise
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`egliseesperanceagde.fr`) || Host(`www.egliseesperanceagde.fr`)
      kind: Rule
      middlewares:
        - name: eglise-redirect
      services:
        - name: redirect-eglise
          port: 80
